--- a/config.cfg
+++ b/config.cfg
@@ -1,1 +1,2 @@
-SQLALCHEMY_DATABASE_URI = 'postgres://postgres:ratestask@0.0.0.0:5432/ratestask'
+SQLALCHEMY_DATABASE_URI = 'postgres://postgres:ratestask@db:5432/postgres'
+SQLALCHEMY_TRACK_MODIFICATIONS = False
