Use single config

--- a/config.cfg
+++ b/config.cfg
@@ -1,2 +1,3 @@
 SQLALCHEMY_DATABASE_URI = 'postgres://postgres:ratestask@db:5432/postgres'
 SQLALCHEMY_TRACK_MODIFICATIONS = False
+OPENEXCHANGERATES_API = 'https://openexchangerates.org/api/latest.json?app_id=4ea9940da415458f8a5db1c149bacc60'
